--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,7 +6,7 @@ cmds = ["corepack enable && pnpm install --frozen-lockfile"]
 cacheDirectories = ["/root/.local/share/pnpm/store", "node_modules/.cache"]
 
 [phases.build]
-cmds = ["pnpm build"]
+cmds = ["pnpm build && cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public"]
 cacheDirectories = [".next/cache"]
 
 [start]
