feat(receipt-scan): implement OCR scanning with Gemini integration
- Add @google/genai SDK and Gemini client singleton
- Create POST /api/receipts/scan endpoint with image validation and OCR
- Add receiptScanResultSchema to validations
- Add initialData prop to TransactionForm for pre-filling scanned data
- Add scanning spinner and error states to ScanReceiptSheet
- Wire full OCR → form flow in AppShell orchestrator

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@google/genai": "^1.42.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^6.2.0",
     "bcryptjs": "^2.4.3",
