--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL="postgres://myuser:mypassword@localhost:5432/budgettracker-nextjs"
 NEXTAUTH_SECRET="change-this-to-a-random-secret-in-production"
 NEXTAUTH_URL="http://localhost:3000"
+
+# Google Gemini (receipt scanning OCR)
+GEMINI_API_KEY=""
+GEMINI_MODEL="gemini-2.5-flash"
